# mcp-nvidia

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  Makefile  PUBLISHING.md  README.md  example_usage.py  package.json  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  publish.yml  test.yml
scripts/: check-python.js  sync-version.py
src/mcp_nvidia/: __main__.py  http_server.py  server.py
src/mcp_nvidia/lib/: constants.py  content_discovery.py  deduplication.py  relevance.py  search.py  snippet.py
src/mcp_nvidia/sdk_generator/: python_generator.py  typescript_generator.py
src/mcp_nvidia/ui/: __init__.py  components.py  renderer.py  templates.py
tests/: __init__.py  test_client.py  test_integration.py  test_resources.py  test_sdk_generation.py  test_server.py  test_ui_rendering.py
