[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nvidia"
version = "0.1.0"
description = "MCP server to search across NVIDIA blogs and releases to empower LLMs to better answer NVIDIA specific queries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bharat Raghunathan"}
]
keywords = ["mcp", "nvidia", "search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.20.0",
   "httpx>=0.28.0",
   "beautifulsoup4>=4.14.0",
   "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-nvidia = "mcp_nvidia.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_nvidia"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]
